# sudoku

./: .replit  Database.md  README.md  pyproject.toml  replit.md
django_project/: settings.py
docs/: API.md  Algorithms.md  Architecture.md  Database.md  Installation.md  README.md
docs/en/: API.md  Algorithms.md  Architecture.md  Installation.md  README.md
static/css/: style.css
static/js/: chat.js  main.js  sudoku.js
sudoku/: models.py  urls.py  views.py
sudoku/migrations/: 0001_initial.py  0002_emailverification.py
templates/: base.html  chat.html  game.html  home.html  leaderboard.html
templates/registration/: login.html  register.html
